# medico

./: .gitignore
backend/: .env  Cargo.toml
backend/.sqlx/: query-0791a2ad6658ae16b7fc2dd9ed33130bbf4c1f359e17deeba52881efdc76c1cb.json  query-1197c23fb51a6206a36f5a4d9b556001c9bcff00f6813f21a25ee4983b659546.json  query-14c248c635d5f4ba631a4e310ef9e9c859687446d6c61f68ffcbc119390e8b0a.json  query-1aeece2262f7073bdeb4b8c2c054dadbe6ac95e87f560875993f58ca65b8f237.json  query-3fb445678e27e93382d1e5cf2c079872419e496a8e70ad68e8806e15fd074dd1.json  query-4b833e002cc08b6c3b01d950c50850f9da8a6a80d01af2b159d79465e78e2ef9.json  query-4dccb7143f5d005294874359e127b69272b3004489b917dddd9a8fc4e02df2b8.json  query-6eed0d98d5d2002db9acab4436e8fa324e1b78394204aed6874af8a81dc4474b.json  query-8a8696c2231e4e1382d38d5416f1ccafa54e36d797c54adefab49c3331b7242b.json  query-9913f35ed9d88b23ab57a5bf5599859ae7458889d4e68b896ce066806e6a084c.json  query-9c680f320dd2532df28725dbdfea8935b6e9b164b301c7953263971e9276bc54.json  query-9d7b981366e70e8d1f126393881d732682fab1eb083e25cfecaad36f63f31ee6.json  query-bf5676769916ea7f3716f100aea1373440afe3383b5036534efcea0abc6da1fb.json  query-d326c202d8c73b94e79315b2f6bbe3eb7eb80b27b1cfb695fbd2911102261650.json  query-d96fb2cc3d7de245d847eb51586396e9e5a74d655bb3ace44e3ec09d1dffd009.json  query-f1ce367488df4d78960acb044d49323e9ea7247e6e4abc702ef4e5a34b06dae2.json  query-f65ef956c54739decbda224de210491749790ff382cd0336b723e7b3a9177ed0.json
backend/src/: main.rs  tasks.rs
backend/src/config/: mod.rs
backend/src/handlers/: ajustes.rs  google_fit.rs  pasos.rs  (+2 more)
(+38 files in other folders)
