[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
dotenvy = "0.15.6"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
reqwest = { version = "0.12.4", features = ["json"] }
#bigdecimal = { version = "0.4.3", features = ["serde"] }
tokio-cron-scheduler = "0.11.0"
oauth2 = "4.4"